--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Alexandra Bunga | IT Portfolio</title>
+</head>
+<body>
+  <h1>Alexandra Bunga</h1>
+  <p>BSc Computing student | Python | SQL | Web Development</p>
+
+  <p>
+    <a href="projects.html">Projects</a> |
+    <a href="skills.html">Skills</a> |
+    <a href="education.html">Education</a>
+  </p>
+</body>
+</html>
 
